--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dom": "18.2.0",
     "react-floating-whatsapp": "^5.0.7",
     "react-icons": "^4.7.1",
+    "react-native-webview": "11.23.0",
     "react-player": "^2.11.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
